Change swagger schema
