# gen/models/pay_all_request.go
@@ -1,0 +1,100 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"bytes"
+	"encoding/json"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// PayAllRequest pay all request
+//
+// swagger:model payAllRequest
+type PayAllRequest struct {
+
+	// amount
+	// Required: true
+	Amount *int32 `json:"amount"`
+
+	// limit
+	Limit int32 `json:"limit,omitempty"`
+
+	// offset
+	Offset int32 `json:"offset,omitempty"`
+}
+
+// UnmarshalJSON unmarshals this object while disallowing additional properties from JSON
+func (m *PayAllRequest) UnmarshalJSON(data []byte) error {
+	var props struct {
+
+		// amount
+		// Required: true
+		Amount *int32 `json:"amount"`
+
+		// limit
+		Limit int32 `json:"limit,omitempty"`
+
+		// offset
+		Offset int32 `json:"offset,omitempty"`
+	}
+
+	dec := json.NewDecoder(bytes.NewReader(data))
+	dec.DisallowUnknownFields()
+	if err := dec.Decode(&props); err != nil {
+		return err
+	}
+
+	m.Amount = props.Amount
+	m.Limit = props.Limit
+	m.Offset = props.Offset
+	return nil
+}
+
+// Validate validates this pay all request
+func (m *PayAllRequest) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateAmount(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *PayAllRequest) validateAmount(formats strfmt.Registry) error {
+
+	if err := validate.Required("amount", "body", m.Amount); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *PayAllRequest) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *PayAllRequest) UnmarshalBinary(b []byte) error {
+	var res PayAllRequest
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
